# geotunes-backend-rust

./: .env  Cargo.toml  Procfile  README.md
src/: config.rs  errors.rs  main.rs  types.rs
src/data/: db.rs  mod.rs
src/data/auth/: accessors.rs  mod.rs
src/data/auth/sql/: get_one_by_email.sql  get_token_by_user_id_provider.sql  insert_one_user_auth_provider.sql  insert_one_user_details.sql  insert_one_user_ret_id.sql
src/data/migration/: down.sql  up.sql
src/data/model/: mod.rs  song.rs  user.rs
src/data/song/: accessors.rs  mod.rs  models.rs
src/data/song/sql/: check_exists_by_id.sql  get_by_uri_provider.sql  get_nearby.sql  get_nearby_in_world.sql  get_nearby_station_id.sql  insert_one_song_history.sql  insert_one_song_history_with_world.sql  insert_one_song_link.sql  insert_one_song_ret_id.sql  insert_one_station_ret_id.sql
src/data/world/: accessors.rs  mod.rs  models.rs
src/data/world/sql/: get_all_like_name_paginated.sql  get_all_paginated.sql  insert_one_world_ret_id.sql
src/extractor/: auth.rs
src/mapper/: mod.rs  song.rs  world.rs
src/routes/: mod.rs
src/routes/auth/: handlers.rs  mod.rs
src/routes/auth/model/request/: login.rs
src/routes/model/request/: location.rs  mod.rs
src/routes/model/request/payload/: add_local.rs  mod.rs
src/routes/song/: handlers.rs  mod.rs
src/routes/song/model/request/: mod.rs
src/routes/song/model/request/payload/: add.rs  mod.rs
src/routes/song/model/response/: mod.rs  song.rs
src/routes/world/: handlers.rs  mod.rs
src/routes/world/model/response/: world.rs
src/utils/: jwt.rs
(+4 files in other folders)
