[package]
name = "geotunes"
version = "0.1.0"
authors = ["Suhel Chakraborty <chakraborty.suhel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
actix-rt = "2.2.0"
actix-http = "3.0.0-beta.6"
actix-service = "2.0.0"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5.2", features = [ "runtime-actix-rustls", "postgres", "uuid", "chrono", "json" ] }
dotenv = "0.15.0"
jsonwebtoken = "7"
uuid = { version = "0.8", features = ["v5", "serde"] }

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"